deploy: 4fd9bd158b991a8990ed1b16fe2d9e6f5e1d6193

--- a/content/news.html
+++ b/content/news.html
@@ -232,6 +232,33 @@ actively in the community.</p>
 project since there is no need to go via the patch
 submission process. This should enable better productivity.
 A PPMC member helps manage and guide the direction of the project.</p>
+<h1><a href="/news/2022-05-24-new-committers.html">New committers: Zhen Wang</a></h1>
+<p><small>2022 Mar 29 </small></p>
+<p>The Podling Project Management Committee (PPMC) for Apache Kyuubi
+has invited <a href="https://github.com/wForget">Zhen Wang</a> to become our committer
+and we are pleased to announce that he has accepted.</p>
+<p>Zhen contributed to several modules in Kyuubi consistently over 6 months,
+including both the Kyuubi server and Spark SQL engine.</p>
+<p>The enhancements he made to Kyuubi server:</p>
+<ul>
+<li>Added connection concurrency limit to kyuubi server</li>
+<li>Added the digest Zookeeper authentication mode to the service discovery
+module</li>
+<li>Optimized orphan engine related issues</li>
+</ul>
+<p>The features and enhancements he made to Spark SQL engine:</p>
+<ul>
+<li>Implemented a history server plugin of Kyuubi to Spark</li>
+<li>Implemented the execution progress of Spark SQL statements</li>
+<li>Supported single session mode of the Spark SQL engine</li>
+<li>Participated in the discussion and optimization of the engine pool.</li>
+</ul>
+<p>He also helps review other developers' pull requests actively in the community.</p>
+<p>Please join me in congratulating Zhen!</p>
+<p>Being a committer enables easier contribution to the
+project since there is no need to go via the patch
+submission process. This should enable better productivity.
+A PPMC member helps manage and guide the direction of the project.</p>
 <h1><a href="/news/2022-03-25-release-1.5.0-incubating.html">Apache Kyuubi(Incubating) 1.5.0-incubating released</a></h1>
 <p><small>2022 Mar 25 </small></p>
 <p>We are happy to announce the availability of <a href="/release/1.5.0-incubating.html">Apache Kyuubi(Incubating) 1.5.0-incubating</a>! Visit the <a href="/release/1.5.0-incubating.html">release notes</a> to read about the new features, or <a href="/releases.html">download</a> the released today.</p>
