--- a/content/zh/project_history.html
+++ b/content/zh/project_history.html
@@ -232,6 +232,12 @@ Apache Software Foundation
 <td class="center aligned"><a href="zh/news/2022-03-29-new-committers.html">查看更多</a></td>
 </tr>
 <tr>
+<td class="center aligned">2022年03月29日</td>
+<td class="center aligned">新的 Committer: Zhen Wang</td>
+<td class="center aligned">我们很高兴地宣布 Zhen Wang 成为新的 Kyuubi Committer。</td>
+<td class="center aligned"><a href="zh/news/2022-05-24-new-committers.html">查看更多</a></td>
+</tr>
+<tr>
 <td class="center aligned">2022年03月25日</td>
 <td class="center aligned">Apache Kyuubi(Incubating) 1.5.0-incubating 发布</td>
 <td class="center aligned">
