deploy: 8ebb840a809b7b2d66bec1336ef62265447e49f2

--- a/content/zh/news.html
+++ b/content/zh/news.html
@@ -211,21 +211,8 @@ Apache Software Foundation
 <div>
 <h1 id="title">News Archive</h1>
 <ul id="list">
-<h1><a href="/zh/news/2022-04-21-release-1.5.1-incubating.html">Apache Kyuubi(Incubating) 1.5.1-incubating 发布</a></h1>
-<p><small>2022 4月 21 </small></p>
-<p>我们很高兴地宣布 <a href="/zh/release/1.5.1-incubating.html">Apache Kyuubi(Incubating) 1.5.1-incubating</a> 发布了! 查看 <a href="/zh/release/1.5.1-incubating.html">发布记录</a> 阅读有关新功能的信息，或者马上 <a href="/zh/releases.html">下载</a> 体验吧。</p>
-<h1><a href="/zh/news/2022-03-29-new-committers.html">新的 Committer: Nicholas Jiang 和 Fu Chen</a></h1>
-<p><small>2022 3月 29 </small></p>
-<p>Apache Kyuubi 的 Podling 项目管理委员会 (PMC) 已邀请 <a href="https://github.com/SteNicholas">Nicholas Jiang</a> 和
-<a href="https://github.com/cfmcgrady">Fu Chen</a> 成为我们的Committer，我们很高兴地宣布他们都接受了。</p>
-<p>Nicholas 一直在 Kyuubi 社区的多个领域工作，尤其是在 Flink SQL 引擎方面，他在 Kyuubi Flink SQL 引擎的实施、推广和问答方面发挥着重要作用。</p>
-<p>Fu 在 6 个月内持续为 Kyuubi 的多个模块做出贡献，包括 Spark 引擎、Spark 引擎扩展、Kyuubi server restful api 和 Kyuubi 的基础设施。
-他还帮助在社区中积极审查其他开发人员的PR。</p>
-<p>让我们一起祝贺 Nicholas 和 Fu！</p>
-<p>成为 Committer 可以更轻松地为项目做出贡献，因为不需要通过补丁提交过程，这能够提高生产力。
-PPMC 成员帮助管理和指导项目的方向。</p>
 <h1><a href="/zh/news/2022-05-24-new-committers.html">新的 Committer: Zhen Wang</a></h1>
-<p><small>2022 3月 29 </small></p>
+<p><small>2022 五月 24 </small></p>
 <p>Apache Kyuubi 的 Podling 项目管理委员会 (PMC) 已邀请 <a href="https://github.com/wForget">Zhen Wang</a>
 成为我们的Committer，我们很高兴地宣布他已经接受邀请。</p>
 <p>Zhen 在 6 个月内持续为 Kyuubi 的多个模块做出贡献，包括Kyuubi server 和 Spark SQL Engine。</p>
@@ -244,6 +231,19 @@ PPMC 成员帮助管理和指导项目的方向。</p>
 </ul>
 <p>他还帮助在社区中积极审查其他开发人员的PR。</p>
 <p>让我们一起祝贺 Zhen！</p>
+<p>成为 Committer 可以更轻松地为项目做出贡献，因为不需要通过补丁提交过程，这能够提高生产力。
+PPMC 成员帮助管理和指导项目的方向。</p>
+<h1><a href="/zh/news/2022-04-21-release-1.5.1-incubating.html">Apache Kyuubi(Incubating) 1.5.1-incubating 发布</a></h1>
+<p><small>2022 4月 21 </small></p>
+<p>我们很高兴地宣布 <a href="/zh/release/1.5.1-incubating.html">Apache Kyuubi(Incubating) 1.5.1-incubating</a> 发布了! 查看 <a href="/zh/release/1.5.1-incubating.html">发布记录</a> 阅读有关新功能的信息，或者马上 <a href="/zh/releases.html">下载</a> 体验吧。</p>
+<h1><a href="/zh/news/2022-03-29-new-committers.html">新的 Committer: Nicholas Jiang 和 Fu Chen</a></h1>
+<p><small>2022 3月 29 </small></p>
+<p>Apache Kyuubi 的 Podling 项目管理委员会 (PMC) 已邀请 <a href="https://github.com/SteNicholas">Nicholas Jiang</a> 和
+<a href="https://github.com/cfmcgrady">Fu Chen</a> 成为我们的Committer，我们很高兴地宣布他们都接受了。</p>
+<p>Nicholas 一直在 Kyuubi 社区的多个领域工作，尤其是在 Flink SQL 引擎方面，他在 Kyuubi Flink SQL 引擎的实施、推广和问答方面发挥着重要作用。</p>
+<p>Fu 在 6 个月内持续为 Kyuubi 的多个模块做出贡献，包括 Spark 引擎、Spark 引擎扩展、Kyuubi server restful api 和 Kyuubi 的基础设施。
+他还帮助在社区中积极审查其他开发人员的PR。</p>
+<p>让我们一起祝贺 Nicholas 和 Fu！</p>
 <p>成为 Committer 可以更轻松地为项目做出贡献，因为不需要通过补丁提交过程，这能够提高生产力。
 PPMC 成员帮助管理和指导项目的方向。</p>
 <h1><a href="/zh/news/2022-03-25-release-1.5.0-incubating.html">Apache Kyuubi(Incubating) 1.5.0-incubating 发布</a></h1>
