deploy: ab61c04dca15136a16feede639205be27f74c1a1

--- a/content/news.html
+++ b/content/news.html
@@ -211,7 +211,7 @@ Apache Software Foundation
 <div>
 <h1 id="title">News Archive</h1>
 <ul id="list">
-<h1><a href="/news/2022-05-24-new-committers.html">New committers: Zhen Wang</a></h1>
+<h1><a href="/news/2022-05-24-new-committers.html">New committer: Zhen Wang</a></h1>
 <p><small>2022 May 24 </small></p>
 <p>The Podling Project Management Committee (PPMC) for Apache Kyuubi
 has invited <a href="https://github.com/wForget">Zhen Wang</a> to become our committer
