--- a/content/project_history.html
+++ b/content/project_history.html
@@ -219,7 +219,7 @@ Apache Software Foundation
 </thead>
 <tr>
 <td class="center aligned">2022 May 24 </td>
-<td class="center aligned">New committers: Zhen Wang</td>
+<td class="center aligned">New committer: Zhen Wang</td>
 <td class="center aligned">We are happy to announce Zhen Wang becomes a new Kyuubi committer.</td>
 <td class="center aligned"><a href="/news/2022-05-24-new-committers.html">see more</a></td>
 </tr>
