deploy: 35678705b74c91ee7458dee533b46604008ffe0f

--- a/content/zh/project_history.html
+++ b/content/zh/project_history.html
@@ -234,6 +234,14 @@ Apache Software Foundation
 <td class="center aligned"><a href="zh/news/2022-04-21-release-1.5.1-incubating.html">查看更多</a></td>
 </tr>
 <tr>
+<td class="center aligned">2022年04月21日</td>
+<td class="center aligned">Apache Kyuubi(Incubating) 1.5.2-incubating released</td>
+<td class="center aligned">
+<p>我们很高兴地宣布 <a href="/zh/release/1.5.2-incubating.html">Apache Kyuubi(Incubating) 1.5.2-incubating</a> 发布了! 查看 <a href="/zh/release/1.5.2-incubating.html">发布记录</a> 阅读有关新功能的信息，或者马上 <a href="/zh/releases.html">下载</a> 体验吧。</p>
+</td>
+<td class="center aligned"><a href="zh/news/2022-06-18-release-1.5.2-incubating.html">查看更多</a></td>
+</tr>
+<tr>
 <td class="center aligned">2022年03月29日</td>
 <td class="center aligned">新的 Committer: Nicholas Jiang 和 Fu Chen</td>
 <td class="center aligned">我们很高兴地宣布 Nicholas Jiang 和 Fu Chen 成为新的 Kyuubi Committer。</td>
