--- a/content/zh/news.html
+++ b/content/zh/news.html
@@ -238,6 +238,9 @@ PPMC 成员帮助管理和指导项目的方向。</p>
 <h1><a href="/zh/news/2022-04-21-release-1.5.1-incubating.html">Apache Kyuubi(Incubating) 1.5.1-incubating 发布</a></h1>
 <p><small>2022 4月 21 </small></p>
 <p>我们很高兴地宣布 <a href="/zh/release/1.5.1-incubating.html">Apache Kyuubi(Incubating) 1.5.1-incubating</a> 发布了! 查看 <a href="/zh/release/1.5.1-incubating.html">发布记录</a> 阅读有关新功能的信息，或者马上 <a href="/zh/releases.html">下载</a> 体验吧。</p>
+<h1><a href="/zh/news/2022-06-18-release-1.5.2-incubating.html">Apache Kyuubi(Incubating) 1.5.2-incubating released</a></h1>
+<p><small>2022 4月 21 </small></p>
+<p>我们很高兴地宣布 <a href="/zh/release/1.5.2-incubating.html">Apache Kyuubi(Incubating) 1.5.2-incubating</a> 发布了! 查看 <a href="/zh/release/1.5.2-incubating.html">发布记录</a> 阅读有关新功能的信息，或者马上 <a href="/zh/releases.html">下载</a> 体验吧。</p>
 <h1><a href="/zh/news/2022-03-29-new-committers.html">新的 Committer: Nicholas Jiang 和 Fu Chen</a></h1>
 <p><small>2022 3月 29 </small></p>
 <p>Apache Kyuubi 的 Podling 项目管理委员会 (PMC) 已邀请 <a href="https://github.com/SteNicholas">Nicholas Jiang</a> 和
@@ -272,11 +275,28 @@ PPMC 成员帮助管理和指导项目的方向。</p>
 <h1><a href="/zh/news/2021-09-14-release-1.3.0-incubating.html">Apache Kyuubi(Incubating) 1.3.0-incubating 发布</a></h1>
 <p><small>2021 9月 14 </small></p>
 <p>我们很高兴地宣布 <a href="/zh/release/1.3.0-incubating.html">Apache Kyuubi(Incubating) 1.3.0-incubating</a> 发布了! 查看 <a href="/zh/release/1.3.0-incubating.html">发布记录</a> 阅读有关新功能的信息, 或者马上 <a href="/zh/releases.html">下载</a> 体验吧。</p>
-<h1><a href="/zh/news/2021-06-21-accept-incubator.html">Kyuubi 进入 Apache 孵化器</a></h1>
-<p><small>2021 6月 21 </small></p>
-<p>Kyuubi 正式进入 Apache 孵化器, 详见 <a href="https://incubator.apache.org/projects/kyuubi">incubation status</a>.</p>
 </ul>
 </div>
+<ul class="pagination pagination-default">
+<li class="page-item disabled">
+<a href="#" aria-disabled="true" aria-label="First" class="page-link" role="button" tabindex="-1"><span aria-hidden="true">&#171;&#171;</span></a>
+</li>
+<li class="page-item disabled">
+<a href="#" aria-disabled="true" aria-label="Previous" class="page-link" role="button" tabindex="-1"><span aria-hidden="true">&#171;</span></a>
+</li>
+<li class="page-item active">
+<a href="#" aria-current="page" aria-label="Page 1" class="page-link" role="button">1</a>
+</li>
+<li class="page-item">
+<a href="/zh/news/page/2.html" aria-label="Page 2" class="page-link" role="button">2</a>
+</li>
+<li class="page-item">
+<a href="/zh/news/page/2.html" aria-label="Next" class="page-link" role="button"><span aria-hidden="true">&#187;</span></a>
+</li>
+<li class="page-item">
+<a href="/zh/news/page/2.html" aria-label="Last" class="page-link" role="button"><span aria-hidden="true">&#187;&#187;</span></a>
+</li>
+</ul>
 </section>
 </div>
 <footer class="footer">
