deploy: a36fd16cc2e0cddcd3d2cc302ffeffd5c7208c83

--- a/content/become_committer.html
+++ b/content/become_committer.html
@@ -249,6 +249,9 @@ Apache Software Foundation
 <td>Nicholas Jiang</td>
 </tr>
 <tr>
+<td>Shaoyun Chen</td>
+</tr>
+<tr>
 <td>Vino Yang</td>
 </tr>
 <tr>
