--- a/content/zh/become_committer.html
+++ b/content/zh/become_committer.html
@@ -249,6 +249,9 @@ Apache Software Foundation
 <td>Nicholas Jiang</td>
 </tr>
 <tr>
+<td>Shaoyun Chen</td>
+</tr>
+<tr>
 <td>Vino Yang</td>
 </tr>
 <tr>
