deploy: 95cc0b4fbf4def3827732a5e4f9d2918611e10a2

--- a/content/developer-tools.html
+++ b/content/developer-tools.html
@@ -239,13 +239,23 @@ Apache Software Foundation
 <tbody>
 <tr>
 <td>-Pspark-3.0</td>
-<td>Yes</td>
+<td>No</td>
 <td>1.0.0</td>
 </tr>
 <tr>
 <td>-Pspark-3.1</td>
 <td>No</td>
 <td>1.1.0</td>
+</tr>
+<tr>
+<td>-Pspark-3.2</td>
+<td>Yes</td>
+<td>1.4.0</td>
+</tr>
+<tr>
+<td>-Pspark-3.3</td>
+<td>No</td>
+<td>1.6.0</td>
 </tr>
 </tbody>
 </table>
