--- a/content/news.html
+++ b/content/news.html
@@ -216,6 +216,33 @@ Apache Software Foundation
 <h1><a href="/news/2022-06-18-release-1.5.2-incubating.html">Apache Kyuubi(Incubating) 1.5.2-incubating released</a></h1>
 <p><small>2022 Jun 18 </small></p>
 <p>We are happy to announce the availability of <a href="/release/1.5.2-incubating.html">Apache Kyuubi(Incubating) 1.5.2-incubating</a>! Visit the <a href="/release/1.5.2-incubating.html">release notes</a> to read about the new features, or <a href="/releases.html">download</a> the released today.</p>
+<h1><a href="/news/2022-06-21-new-committers.html">New committer: Shaoyun Chen</a></h1>
+<p><small>2022 May 24 </small></p>
+<p>The Podling Project Management Committee (PPMC) for Apache Kyuubi
+has invited <a href="https://github.com/cxzl25">Shaoyun Chen</a> to become our committer
+and we are pleased to announce that he has accepted.</p>
+<p>Shaoyun is currently working for Trip.com.</p>
+<p>He has contributed to multiple modules of the Apache Kyuubi since last
+year including:</p>
+<ul>
+<li>Implement dedicated set/get catalog/database operators</li>
+<li>Add adapter layer in Kyuubi Hive JDBC module</li>
+<li>Make ProcessBuilder.commands immutable</li>
+<li>Redact secret information from ProcBuilder log</li>
+<li>kyuubi-ctl some optimizations and added documentation</li>
+<li>Participate in discussions and development Spark TPC-DS Connector</li>
+<li>Investigate and fix multiple flaky tests</li>
+</ul>
+<p>He has introduced Apache Kyuubi V1.4.0 to Trip.com as a multi-tenant
+SQL engine for Spark3, running a large number of Ad-Hoc queries every
+day.
+He found and fixed some bugs encountered in the production
+environment, and also implemented some optimizations.</p>
+<p>Please join me in congratulating Shaoyun!</p>
+<p>Being a committer enables easier contribution to the
+project since there is no need to go via the patch
+submission process. This should enable better productivity.
+A PPMC member helps manage and guide the direction of the project.</p>
 <h1><a href="/news/2022-05-24-new-committers.html">New committer: Zhen Wang</a></h1>
 <p><small>2022 May 24 </small></p>
 <p>The Podling Project Management Committee (PPMC) for Apache Kyuubi
@@ -293,9 +320,6 @@ A PPMC member helps manage and guide the direction of the project.</p>
 <h1><a href="/news/2021-10-25-release-1.3.1-incubating.html">Apache Kyuubi(Incubating) 1.3.1-incubating released</a></h1>
 <p><small>2021 Oct 25 </small></p>
 <p>We are happy to announce the availability of <a href="/release/1.3.1-incubating.html">Apache Kyuubi(Incubating) 1.3.1-incubating</a>! Visit the <a href="/release/1.3.1-incubating.html">release notes</a> to read about the new features, or <a href="/releases.html">download</a> the released today.</p>
-<h1><a href="/news/2021-09-14-release-1.3.0-incubating.html">Apache Kyuubi(Incubating) 1.3.0-incubating released</a></h1>
-<p><small>2021 Sep 14 </small></p>
-<p>We are happy to announce the availability of <a href="/release/1.3.0-incubating.html">Apache Kyuubi(Incubating) 1.3.0-incubating</a>! Visit the <a href="/release/1.3.0-incubating.html">release notes</a> to read about the new features, or <a href="/releases.html">download</a> the released today.</p>
 </ul>
 </div>
 <ul class="pagination pagination-default">
