--- a/content/project_history.html
+++ b/content/project_history.html
@@ -229,6 +229,12 @@ Apache Software Foundation
 </tr>
 <tr>
 <td class="center aligned">2022 May 24 </td>
+<td class="center aligned">New committer: Shaoyun Chen</td>
+<td class="center aligned">We are happy to announce Shaoyun Chen becomes a new Kyuubi committer.</td>
+<td class="center aligned"><a href="/news/2022-06-21-new-committers.html">see more</a></td>
+</tr>
+<tr>
+<td class="center aligned">2022 May 24 </td>
 <td class="center aligned">New committer: Zhen Wang</td>
 <td class="center aligned">We are happy to announce Zhen Wang becomes a new Kyuubi committer.</td>
 <td class="center aligned"><a href="/news/2022-05-24-new-committers.html">see more</a></td>
